--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <button class="show-modal" data-modal="modal1">Open Modal 1</button>
   <button class="show-modal" data-modal="modal2">Open Modal 2</button>
+  <button class="show-modal" data-modal="modal3">Open Modal 3</button>
   
   <div id="modal1" class="modal hidden">
     <div class="modal-content">
@@ -24,6 +25,14 @@
       <span class="close-modal">&times;</span>
       <h2>Modal 2 Header</h2>
       <p>This is the content of the second modal!</p>
+    </div>
+  </div>
+
+  <div id="modal3" class="modal hidden">
+    <div class="modal-content">
+      <span class="close-modal">&times;</span>
+      <h2>Modal 3 Header</h2>
+      <p>This is the content of the third modal!</p>
     </div>
   </div>
 
